# bad-weather

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
app/: CMakeLists.txt  app.cpp
include/: Converter.h  Example.h  GetAdvice.h  InvalidCoordinates.h  InvalidCordinates.h  Request.h  UserInput.h
src/: CMakeLists.txt  Converter.cpp  Example.cpp  GetAdvice.cpp  InvalidCoordinates.cpp  Request.cpp  UserInput.cpp  main.cpp
test/: BadWeatherTests.cpp  CMakeLists.txt  ExampleTests.cpp  locations.txt
